update to html file

--- a/testing.html
+++ b/testing.html
@@ -6,20 +6,13 @@
 <h1 align = center>Instant Intellectual!</h1>
 <p align= center> Upload your work below and let us make it instantly sound 20x smarter!</p>
 
-<form action="C:\Users\Owner\Documents\HackBU\Big-Brain-Word-Converter\converter.py">
-<!--<form action="C:\Users\andyh\Pictures\hackloadassets\upload">-->
-  <input type="file" name="pic" accept=".txt*" align=center>
-  <input type="submit" formtarget="C:\Users\andyh\Pictures\hackloadassets\submitsuccess.html">
+<form action="C:\Users\Owner\Documents\HackBU\Big-Brain-Word-Converter\converter.py" enctype =" multipart/form-data" method = "post">
+  <input type="file" name="filename" accept=".txt*">
+  <input type="submit" value="upload">
 </form>
 
 <h2>That was a 200 IQ move but...what about a 400 IQ move ?!?!?!
 <p align= left> Upload the previous output to acheieve the maximum level of enlightenment!</p>
-
-<form action="C:\Users\Owner\Documents\HackBU\Big-Brain-Word-Converter\converter.py">
-<!--<form action="C:\Users\andyh\Pictures\hackloadassets\upload">-->
-  <input type="file" name="pic" accept=".txt*" align=center>
-  <input type="submit" formtarget="C:\Users\andyh\Pictures\hackloadassets\submitsuccess.html">
-</form>
 
 <img src = "Galaxybrain.png" title="Galaxy Brain" height=350 width=450>
 
