text on web now

--- a/testing.html
+++ b/testing.html
@@ -9,6 +9,7 @@
 <form action="C:\Users\Owner\Documents\HackBU\Big-Brain-Word-Converter\converter.py" enctype =" multipart/form-data" method = "post">
   <input type="file" name="filename" accept=".txt*">
   <input type="submit" value="upload">
+  <a href="/runCode">Button</a>
 </form>
 
 <h2>That was a 200 IQ move but...what about a 400 IQ move ?!?!?!
